[package]
name = "msc"
version = "0.5.4"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
description = "A library for working with Smash 4's MotionScript bytecode"
repository = "https://github.com/jam1garner/msc-rs"
license = "MIT"

[dependencies]
nom = "4.2.3"
byteorder = "1.3.1"
